2007-11-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtFrame::OnClose): Fix compilation when
	USE_MOUSE is not defined.

2007-10-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm term/pslatex.trm: To forestall confusion, add a comment
	that ISO8859-15 is the same thing as Latin9.

2007-10-30  Christian Faulhammer (v-li@users.sourceforge.net)

	* docs/doc2texi.el: Gentoo patch to allow for changed handling of
	newlines in up-coming version of XEmacs. Needed in order to 
	regenerate gnuplot.texi on such a system.
	Bug #1822610

2007-10-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Document option "pm3d depthorder" within
	"help pm3d".

2007-10-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/graphics.c src/graphics.h src/save.c src/show.c
	src/set.c (set_bars) src/unset.c:  Add {front|back} options to the
	'set bars' command. This controls whether or not a solid-fill box or
	histogram bar obscures the lower errorbar.

2007-10-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do3d_plot): Fix (another) bug in space allocation
	for key title.  This one was also present in 4.2
	Bug #1817873

	* src/eval.c (pop_or_convert_from_string): Switch from use of atof()
	to strtod() so that we can trap errors in auto-conversion from string
	to number during expression evaluation.

	* src/wxterminal/gp_cairo.c (gp_cairo_end_polygon): Re-order code to
	quiet an annoying compiler warning.

2007-10-23  Christer Lundberg  <ssslub@users.sourceforge.net>

	* term/post.trm: A font name containing spaces must be protected by
	parentheses in PostScript output.

2007-10-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do3d_plot): Fix bug in space allocation for
	key title.
	Bug #1817873

2007-10-23  Ethan Merritt  <merritt@u.washington.edu>

	Add a mechanism to embed figures in TeX-based documentation

	* docs/README docs/doc2???.c: 'F' in first column of gnuplot.gih